# real-estate-intelligence-unit

./: .GEMINI.md  LICENSE  README.md  pyproject.toml  report.md
.gemini/extensions/property-analysis/: gemini-extension.json
src/real_estate_intelligence_unit/: crew.py  main.py
src/real_estate_intelligence_unit/config/: agents.yaml  tasks.yaml
