[project]
name = "real_estate_intelligence_unit"
version = "0.1.0"
description = "real-estate-intelligence-unit using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai[tools]>=0.130.0,<1.0.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
real_estate_intelligence_unit = "real_estate_intelligence_unit.main:run"
run_crew = "real_estate_intelligence_unit.main:run"
train = "real_estate_intelligence_unit.main:train"
replay = "real_estate_intelligence_unit.main:replay"
test = "real_estate_intelligence_unit.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
